- combined dowbuckets and problembuckets
- decoupled some classes
- added the mediator folder
- moved utils into the core
- added an alert class 
- split spam.py up into app, testing/generator, and services/initializer
- implemented some enums to use instead of strings
- tons of other refactoring
- added a small testing framework & tested the services

6/6/2025
~~~~~~~~~~
- refacted the mini test suite
- did testing for all current mediators, buckets, and services
- fixed little bugs as they showed
- make a user model to hold users
- gave the app a user property
- added a activeProblem property to servers 
- the user and active stuff is the base for the submission and point system 

6/7/2025
~~~~~~~~~~
- made the submitter
- minor to make it work and make it flow better

-------------------------------
MOVED OUT. WAS TOO BUSY TO WORK
-------------------------------

6/19/2025
~~~~~~~~~~
- finished testing the submitter
- finished some other misc testing 
- started on the discord integration
- finished problem cog and embed
- finished contest cog and embed
- finished other cog for about, help, and report
- finished user cog for user related cmds 
- deleted a bunch of junk from archives
- stubbed out the looper

6/20/2025
~~~~~~~~~~
- added a deluser command so users can delete their data
- added a view which allows for yes/no confirmations
- added leaderboard and rank commands

6/25/2025
~~~~~~~~~~
- stubbed out the server cog
- fully added /sconfig
- redid the simple exception and error embed
- more server commands and views

6/26/2025
~~~~~~~~~~
- combined setrole and setchannel into sconfig
- added most of the problem commands
- change dow so it can be multiple days
- finished the looper and rest of commands
- mostly polishing and some minor bug fixes left

-------------------------------
WENT ON VACATION & HOLIDAY
-------------------------------

7/8/2025
~~~~~~~~~~
- many minor bug fixes
- added a general help part to the help command